# cosmic-text-bindings

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  cbindgen.toml  cppbindgen.toml
examples/: CMakeLists.txt  simple.c  simple.cpp
include/: cosmic-text.h  cosmic-text.hpp
odin/: cosmic-text.odin
src/: attrs.rs  buffer.rs  lib.rs  shape.rs  system.rs
